# benchmark-gnn

./: .gitignore  .gitlab-ci.yml  README.md  config.yaml  cross_validation.py  hello.py  pyproject.toml
configs/data/: sulcalgraphs_32_all-features.yaml  sulcalgraphs_32_no-3d.yaml  sulcalgraphs_64_all-features.yaml
configs/data_done/: sulcalgraphs_32_vertex-index.yaml  sulcalgraphs_64.yaml  sulcalgraphs_64_vertex-index.yaml
configs/lr_scheduler/: reduce_on_plateau.yaml
configs/model/: GPS_L1.yaml  diff-pool_all-features.yaml  gat_L1_H128_A1.yaml  gat_L1_H128_A2.yaml  gat_L1_H128_A4.yaml  gat_L1_H128_A8.yaml  gat_L1_H16_A1.yaml  gat_L1_H16_A2.yaml  gat_L1_H16_A4.yaml  gat_L1_H16_A8.yaml  gat_L1_H32_A1.yaml  gat_L1_H32_A2.yaml  gat_L1_H32_A4.yaml  gat_L1_H32_A8.yaml  gat_L1_H64_A1.yaml  gat_L1_H64_A2.yaml  gat_L1_H64_A4.yaml  gat_L1_H64_A8.yaml  gat_L2_H128_A1.yaml  gat_L2_H128_A2.yaml  gat_L2_H128_A4.yaml  gat_L2_H128_A8.yaml  gat_L2_H16_A1.yaml  gat_L2_H16_A2.yaml  gat_L2_H16_A4.yaml  gat_L2_H16_A8.yaml  gat_L2_H32_A1.yaml  gat_L2_H32_A2.yaml  gat_L2_H32_A4.yaml  gat_L2_H32_A8.yaml  gat_L2_H64_A1.yaml  gat_L2_H64_A2.yaml  gat_L2_H64_A4.yaml  gat_L2_H64_A8.yaml  gat_L4_H128_A1.yaml  gat_L4_H128_A2.yaml  gat_L4_H128_A4.yaml  gat_L4_H128_A8.yaml  gat_L4_H16_A1.yaml  gat_L4_H16_A2.yaml  (+159 more)
configs/trainers/: fast_dev_run.yaml  usual.yaml
datasets/: __init__.py  mnist_lightning.py  sulcalgraphs.py  utils.py
models/: lightning.py  pooling_experiments.py  utils.py
